<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    app:itemIconTint="@color/black"
    app:itemTextColor="@color/colorPrimaryDark">

    <group android:checkableBehavior="single"
        android:id="@+id/groupmenu_tout">
        <item
            android:id="@+id/nav_bac"
            android:icon="@drawable/icon_bac"
            android:title="@string/menu_bac"/>
        <item
            android:id="@+id/nav_recherche"
            android:icon="@drawable/search"
            android:title="Rechercher"/>
        <item
            android:id="@+id/nav_conseil"
            android:icon="@drawable/icon_conseil"
            android:title="@string/menu_conseil" />
        <item
            android:id="@+id/nav_moncompte"
            android:icon="@drawable/icon_compte"
            android:title="@string/menu_compte" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/icon_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_aide"
            android:icon="@drawable/icon_aide"
            android:title="@string/menu_aide" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/icon_contact"
            android:title="@string/menu_contact" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupmenu_deconnexion">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_deconnection"
            android:title="@string/menu_logout" />
    </group>

</menu>
