<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_bac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bac_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/zone_conseils"
        android:text="@string/bac_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_bac" />

    <TextView
        android:id="@+id/bac_val_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_temperature" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="122dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="7dp"
        android:src="@drawable/jauge1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_temperature" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/bac_gaugeTemp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:gaugeEndValue="30"
        app:gaugePointEndColor="#000000"
        app:gaugePointSize="6"
        app:gaugePointStartColor="#000000"
        app:gaugeStartAngle="113"
        app:gaugeStartValue="8"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="#00807373"
        app:gaugeStrokeWidth="10dp"
        app:gaugeSweepAngle="312"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_temperature" />

    <TextView
        android:id="@+id/bac_humidite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/zone_conseils"
        android:text="@string/bac_hum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_gaugeTemp"/>

    <TextView
        android:id="@+id/bac_val_humidite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_humidite" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="129dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/jauge2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_humidite" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/bac_gaugeHum"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:gaugeEndValue="75"
        app:gaugePointEndColor="#000000"
        app:gaugePointSize="6"
        app:gaugePointStartColor="#000000"
        app:gaugeStartAngle="102"
        app:gaugeStartValue="30"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="#00807373"
        app:gaugeStrokeWidth="10dp"
        app:gaugeSweepAngle="334"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_humidite" />

    <TextView
        android:id="@+id/bac_ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/zone_conseils"
        android:text="@string/bac_ph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_gaugeHum" />

    <TextView
        android:id="@+id/bac_val_ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_ph" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="122dp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="2dp"
        android:src="@drawable/jauge3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_ph" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/bac_gaugePh"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:gaugeEndValue="90"
        app:gaugePointEndColor="#000000"
        app:gaugePointSize="6"
        app:gaugePointStartColor="#000000"
        app:gaugeStartAngle="103"
        app:gaugeStartValue="50"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="#00807373"
        app:gaugeStrokeWidth="10dp"
        app:gaugeSweepAngle="332"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bac_val_ph" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>